adds AI module